complex encoding notebook.

--- a/image_generation/ligand_encoding/ligand_encoding.ipynb
+++ b/image_generation/ligand_encoding/ligand_encoding.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning in Virtual Screening Review\n",
+    "# Deep Learning in Virtual Screening: Recent Applications and Developments\n",
+    "## Review\n",
     "\n",
     "See skeleton outline here:\n",
     "https://docs.google.com/document/d/1KuKU_EHq9j5bYitJWemYmKid9lSvPWwx5vwE6a8vqJU/edit?usp=sharing\n",
@@ -599,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
